Fixed bios alignment

--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ header nav a:hover {
 }
 
 #about-us > div p {
-  text-align: center;
+  text-align: top;
 }
 
 #contact-us p {
